--- a/BusBoard.Web/Views/Home/BusInfo.cshtml
+++ b/BusBoard.Web/Views/Home/BusInfo.cshtml
@@ -15,9 +15,32 @@
     {
         foreach (var stop in Model.GetStops())
         {
+            var busList = Model.GetDeparturesAtStop(stop);
             <div>
                 <h2>@stop.name</h2>
-                <p>Bus timetable goes here</p>
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">Line</th>
+                      <th scope="col">Destination</th>
+                      <th scope="col">Time</th>
+                      <th scope="col">Expected</th>
+                      <th scope="col">Route</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  @foreach (var bus in busList)
+                  {
+                      <tr>
+                          <th scope="row">@bus.line</th>
+                          <td>@bus.direction</td>
+                          <td>@bus.aimed_departure_time</td>
+                          <td>@bus.expected_departure_time</td>
+                          <td><marquee>@Model.GetRoute(bus)</marquee></td>
+                      </tr>
+                  }
+                  </tbody>
+                </table>
             </div>
         }
     }
