Changed route looping to fit in the boxes, stop at the start and repeat forever

--- a/BusBoard.Web/wwwroot/css/site.css
+++ b/BusBoard.Web/wwwroot/css/site.css
@@ -23,12 +23,14 @@ body {
 
 .marquee *
 {
-  animation: marquee 15s linear 3s infinite;
+  animation: marquee 18s linear infinite;
   white-space: nowrap;
     
 }
 
 @keyframes marquee {
   0%   { transform: translate(0, 0); }
-  100% { transform: translate(-100%, 0); }
+  15%  { transform: translate(0, 0); }
+  100% { transform: translate(-230%, 0); }
+  
 }
