--- a/BusBoard.Web/Views/Home/BusInfo.cshtml
+++ b/BusBoard.Web/Views/Home/BusInfo.cshtml
@@ -4,7 +4,7 @@
   ViewBag.Title = "Bus Information";
 }
 
-<h1>BusInfo</h1>
+<h1>Bussin'Info</h1>
 
 <div class="row">
     <p>You entered postcode @Model.PostCode</p>
@@ -17,38 +17,38 @@
         foreach (var stop in Model.GetStops())
         {
             var busList = Model.GetDeparturesAtStop(stop);
-            <div>
+            <div class="pb-4">
                 <h2>@stop.name</h2>
-                <table class="table" style="table-layout: fixed">
-                  <thead>
+                <table class="table table-hover" style="table-layout: fixed">
+                    <thead>
                     <tr class="d-flex">
-                      <th scope="col" class = "col-1">Line</th>
-                      <th scope="col" class = "col-4">Destination</th>
-                      <th scope="col" class = "col-1">Time</th>
-                      <th scope="col" class = "col-1">Expected</th>
-                      <th scope="col" class = "col-5">Route</th>
+                        <th scope="col" class = "col-1">Line</th>
+                        <th scope="col" class = "col-4">Destination</th>
+                        <th scope="col" class = "col-1">Time</th>
+                        <th scope="col" class = "col-1">Expected</th>
+                        <th scope="col" class = "col-5">Route</th>
                     </tr>
-                  </thead>
-                  <tbody class="table-group-divider">
-                  @{Dictionary<BusData, string> dictionary = Model.findMaxRouteLength(busList);}
-                  @{ double longestLength = dictionary.Values.Select(o => o.Length).Max();}
-                  @foreach (var bus in busList)
-                  {
-                      double dynamicPercentage = -105 * longestLength / dictionary[bus].Length;
-                      var routeString = dictionary[bus];
-                      <tr class="d-flex @((bus.aimed_departure_time != bus.expected_departure_time && bus.expected_departure_time != null) ? "table-danger" : "")">
-                          <th scope="row" class="col-1">@bus.line</th>
-                          <td class="col-4">@bus.direction</td>
-                          <td class="col-1">@bus.aimed_departure_time</td>
-                          <td class="col-1">@bus.expected_departure_time</td>
-                          <td class="col-5">
-                              <div class="marquee" style="--percentage:@(dynamicPercentage)%">
-                                  <p style="animation: marquee @(longestLength/7)s linear infinite;">@routeString</p>
-                              </div>
-                          </td>
-                      </tr>
-                  }
-                  </tbody>
+                    </thead>
+                    <tbody class="table-group-divider">
+                    @{Dictionary<BusData, string> dictionary = Model.FindMaxRouteLength(busList);}
+                    @{ double longestLength = dictionary.Values.Select(o => o.Length).Max();}
+                    @foreach (var bus in busList)
+                    {
+                        double dynamicPercentage = -105 * longestLength / dictionary[bus].Length;
+                        var routeString = dictionary[bus];
+                        <tr class="d-flex @((bus.aimed_departure_time != bus.expected_departure_time && bus.expected_departure_time != null) ? "table-danger" : "")">
+                            <th scope="row" class="col-1">@bus.line</th>
+                            <td class="col-4">@bus.direction</td>
+                            <td class="col-1">@bus.aimed_departure_time</td>
+                            <td class="col-1">@bus.expected_departure_time</td>
+                            <td class="col-5">
+                                <div class="marquee" style="--percentage:@(dynamicPercentage)%">
+                                    <p style="animation: marquee @(longestLength/7)s linear infinite;">@routeString</p>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                    </tbody>
                 </table>
             </div>
         }
