--- a/BusBoard.Web/Views/Home/Index.cshtml
+++ b/BusBoard.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="jumbotron">
-    <h1>BusBoard</h1>
+    <h1>Bussin'Board</h1>
     <p class="lead">For all your bus info needs. Enter a postcode below and click enter to see bus times for that location.</p>
 </div>
 
